# ez-serialize

./: CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt  deserialize.cpp  serialize.cpp
include/ez/: deserialize.hpp  serialize.hpp
include/ez/intern/: Convert.hpp  TypeSupport.hpp
include/ez/serialize/: containers.hpp  core.hpp  ranges.hpp  strings.hpp
src/: Convert.cpp  Convert.hpp  deserialize.cpp  serialize.cpp
tests/: CMakeLists.txt
tests/basic/: CMakeLists.txt  basic.cpp  enumerators.cpp  main.cpp  ranges.cpp  strings.cpp  types.cpp
